Added spark job in scala (not working yet)